# guile-swayer

./: .gitignore  LICENSE  Makefile.am  README.org  behavior.scm  commander  config  configure.ac  example.scm  guile-swayer.scm  init.scm  keybindings.scm  manifest.scm  sjson.scm  swayipc.scm
examples/layout-alternating/: layout-alternating.scm
examples/manual-tiling/: manual-tiling.scm
examples/playground/: example.scm
examples/stumpwm-inspired/: behavior.scm  config  init.scm  keybindings.scm
examples/workspace-groups/: init.scm
guile-swayer/: libs.scm  modules.scm  sjson.scm  swayipc.scm
guile-swayer/libs/: sway-tree-helper.scm
guile-swayer/modules/: auto-reload.scm  general.scm  kbd.scm  layout-alternating.scm  layout-alternating.scm_  layout-manual.scm  which-key.scm  workspace-grid.scm  workspace-groups.scm
guile-swayer/sjson/: builder.scm  parser.scm  record.scm
guile-swayer/swayipc/: connection.scm  dispatcher.scm  events.scm  info.scm  records.scm
libs/: sway-tree-helper.scm
modules/: auto-reload.scm  general.scm  kbd.scm  layout-alternating.scm  which-key.scm  workspace-grid.scm  workspace-groups.scm
sjson/: builder.scm  parser.scm  record.scm
swayipc/: connection.scm  dispatcher.scm  events.scm  info.scm  records.scm
